feat: 제출된 지원서 수 목록 조회 쿼리 메서드 구현